@@ -1,23 +1,0 @@
-<!-- wp:template-part {"slug":"header"} /-->
-
-<!-- wp:geodirectory/geodir-widget-notifications -->
-<div class="wp-block-geodirectory-geodir-widget-notifications">[gd_notifications]</div>
-<!-- /wp:geodirectory/geodir-widget-notifications -->
-
-<!-- wp:geodirectory/geodir-widget-search -->
-<div class="wp-block-geodirectory-geodir-widget-search">[gd_search post_type=''  post_type_hide='false'  bg=''  mt=''  mr=''  mb='3'  ml=''  pt=''  pr=''  pb=''  pl=''  border=''  rounded=''  rounded_size=''  shadow='' ]</div>
-<!-- /wp:geodirectory/geodir-widget-search -->
-
-<!-- wp:geodirectory/geodir-widget-loop-actions -->
-<div class="wp-block-geodirectory-geodir-widget-loop-actions">[gd_loop_actions hide_layouts=''  bg=''  mt=''  mr=''  mb='3'  ml=''  pt=''  pr=''  pb=''  pl=''  border=''  rounded=''  rounded_size=''  shadow='' ]</div>
-<!-- /wp:geodirectory/geodir-widget-loop-actions -->
-
-<!-- wp:geodirectory/geodir-widget-loop -->
-<div class="wp-block-geodirectory-geodir-widget-loop">[gd_loop layout='2'  row_gap=''  column_gap=''  card_border=''  card_shadow=''  bg=''  mt=''  mr=''  mb=''  ml=''  pt=''  pr=''  pb=''  pl=''  border=''  rounded=''  rounded_size=''  shadow='' ]</div>
-<!-- /wp:geodirectory/geodir-widget-loop -->
-
-<!-- wp:geodirectory/geodir-widget-loop-paging -->
-<div class="wp-block-geodirectory-geodir-widget-loop-paging">[gd_loop_paging show_advanced=''  mid_size=''  bg=''  mt=''  mr=''  mb='3'  ml=''  pt=''  pr=''  pb=''  pl=''  border=''  rounded=''  rounded_size=''  shadow='' ]</div>
-<!-- /wp:geodirectory/geodir-widget-loop-paging -->
-
-<!-- wp:template-part {"slug":"footer"} /-->
